# swaytreesave

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: args.rs  config.rs  consts.rs  main.rs  models.rs  niri.rs  sway.rs  util.rs
