[package]
name = "swaytreesave"
version = "0.1.0"
edition = "2024"

[dependencies]
swayipc = "3.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.37", features = ["derive"] }
xdg = "2.5.2"
humantime-serde = "1.1.1"
niri-ipc = "=25.5.1"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
